--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,41 @@ ul {
   flex: 1;
   margin-left: 20px;
 }
+
+/* HERO IMAGE */
+
+hr {
+  margin: 10px 0;
+}
+.hero-image {
+  width: 100%;
+  height: 550px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("img/image.jpg") no-repeat center center/cover;
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  color: #fff;
+}
+
+.btn {
+  cursor: pointer;
+  display: inline-block;
+  border: thin solid #fff;
+  font-weight: bold;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #00000050;
+  color: #fff;
+}
+
+.btn:hover {
+  opacity: 0.7;
+}
+
+.hero-image h2,
+.hero-image p {
+  margin-bottom: 10px;
+}
