--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ hr {
   align-items: center;
   justify-content: flex-end;
   color: #fff;
+  margin-bottom: 20px;
 }
 
 .btn {
@@ -99,4 +100,34 @@ hr {
 .hero-image h2,
 .hero-image p {
   margin-bottom: 10px;
+}
+
+/* News Cards */
+.news-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 25px;
+  margin: 10px 0;
+}
+
+.news-cards img {
+  width: 100%;
+  height: 200px;
+  margin-bottom: 10px;
+}
+.new-cards h3 {
+  font-size: 20px;
+  margin: 10px 0;
+}
+
+.news-cards a {
+  padding: 10px 0;
+  text-transform: uppercase;
+  color: #020202;
+  display: inline-block;
+  font-weight: bold;
+}
+
+.news-cards a:hover {
+  text-decoration: underline;
 }
