--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,16 @@ ul {
   margin-left: 20px;
 }
 
+.menu-btn {
+  position: absolute;
+  cursor: pointer;
+  top: 15px;
+  right: 30px;
+  /* display: none; */
+  z-index: 2;
+  font-size: 1.6rem;
+}
+
 /* HERO IMAGE */
 
 hr {
@@ -73,7 +83,7 @@ hr {
   height: 550px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("img/image.jpg") no-repeat center center/cover;
-  padding-bottom: 50px;
+  padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -112,7 +122,7 @@ hr {
 
 .news-cards img {
   width: 100%;
-  height: 200px;
+  height: 180px;
   margin-bottom: 10px;
 }
 .new-cards h3 {
@@ -130,4 +140,139 @@ hr {
 
 .news-cards a:hover {
   text-decoration: underline;
+}
+
+/* CARD BANNER ONE */
+.cards-banner-one {
+  width: 100%;
+  height: 350px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("img/fondd.jpg") no-repeat center center/cover;
+  margin-bottom: 40px;
+}
+
+.cards-banner-one .content {
+  width: 40%;
+  padding: 90px 0 0 30px;
+  color: #fff;
+}
+
+.cards-banner-one p,
+.cards-banner-one h2 {
+  margin: 10px 0 20px 0;
+}
+
+.cards-banner-two {
+  width: 100%;
+  height: 350px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("img/llama-negra.jpg") no-repeat center center/cover;
+}
+
+.cards-banner-two .content {
+  width: 50%;
+  padding: 100px 0 0 30px;
+  color: #fff;
+}
+
+.cards-banner-two p,
+.cards-banner-two h2 {
+  margin: 10px 0 20px 0;
+}
+
+/* SOCIAL  */
+.social {
+  margin: 50px;
+}
+
+.social p {
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.links a {
+  margin: 0 30px;
+}
+
+.links a i {
+  font-size: 3rem;
+}
+
+/* footer links  */
+
+.footer-links {
+  background: #2f3240;
+  color: #616161;
+  font-size: 12px;
+  padding: 35px 0;
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.footer-container ul {
+  margin: 0 auto;
+}
+
+.footer-container a {
+  color: #fff;
+}
+
+.footer-container ul li {
+  line-height: 1.8;
+}
+
+.footer {
+  background: #2f3640;
+  color: #616161;
+  font-size: 12px;
+  padding: 20px 0;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+@media (max-width: 700px) {
+  .nav-main ul.nav-menu {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #f2f2f2;
+    height: 100%;
+    padding: 30px;
+    transform: translateX(-20px);
+    opacity: 0.9;
+  }
+
+  .nav-main ul.nav-menu li {
+    padding: 20px;
+    font-size: 14px;
+  }
+  .nav-main ul.nav-menu-right {
+    margin-right: 50px;
+  }
+  .news-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .cards-banner-one .content,
+  .cards-banner-two .content {
+    width: 80%;
+  }
+
+  .footer-links .footer-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
