--- a/styles.css
+++ b/styles.css
@@ -252,10 +252,13 @@ hr {
     background-color: #f2f2f2;
     height: 100%;
     padding: 30px;
-    transform: translateX(-20px);
+    transform: translateX(-400px);
     opacity: 0.9;
+    transition: transform 0.5s ease-in-out;
   }
-
+  .nav-main ul.nav-menu.show {
+    transform: translateX(-20px);
+  }
   .nav-main ul.nav-menu li {
     padding: 20px;
     font-size: 14px;
