--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ ul {
   /* display: none; */
   z-index: 2;
   font-size: 1.6rem;
+  display: none;
 }
 
 /* HERO IMAGE */
@@ -244,6 +245,9 @@ hr {
 }
 
 @media (max-width: 700px) {
+  .menu-btn {
+    display: block;
+  }
   .nav-main ul.nav-menu {
     display: block;
     position: absolute;
@@ -277,5 +281,29 @@ hr {
 
   .footer-links .footer-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 500px) {
+  .menu-btn {
+    display: block;
+  }
+
+  .news-cards {
+    grid-template-columns: 1fr;
+  }
+
+  .news-cards img {
+    height: 270px;
+  }
+
+  .cards-banner-one .content,
+  .cards-banner-two .content {
+    width: 100%;
+    padding: 60px 20px;
+  }
+
+  .footer-links .footer-container {
+    grid-template-columns: 1fr;
   }
 }
