--- a/styles.css
+++ b/styles.css
@@ -325,7 +325,7 @@ hr {
 
 .article-image {
   width: 100%;
-  height: 400px;
+  height: auto;
   object-fit: cover;
   object-position: center;
   border-radius: 8px;
@@ -357,4 +357,43 @@ hr {
 
 .btn-return:hover {
   opacity: 0.8;
+}
+
+/* CONTACTO  */
+
+.contact-section {
+  background-color: #fff;
+  padding: 40px;
+  max-width: 600px;
+  margin: 50px auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.contact-section h2 {
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.contact-section a {
+  display: block;
+  margin: 10px 0;
+  color: #007bff;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.contact-section a:hover {
+  text-decoration: underline;
+}
+
+.contact-section p {
+  font-size: 18px;
+  color: #333;
+}
+
+/* ACERCA DE  */
+
+.wankadev-highlight {
+  color: #e74c3c;
 }
